Fix T77766: support animated global gravity toggle

Reviewers: sebbas

Differential Revision: https://developer.blender.org/D8281