source/blender/makesdna/DNA_fluid_types.h
@@ -471,9 +471,10 @@ typedef struct FluidDomainSettings {
   int res_max[3];          /* Cell max. */
   int res[3];              /* Data resolution (res_max-res_min). */
   int total_cells;
-  float dx;           /* 1.0f / res. */
-  float scale;        /* Largest domain size. */
-  int boundary_width; /* Usually this is just 1. */
+  float dx;               /* 1.0f / res. */
+  float scale;            /* Largest domain size. */
+  int boundary_width;     /* Usually this is just 1. */
+  float gravity_final[3]; /* Scene or domain gravity multiplied with gravity weight. */
 
   /* -- User-accesible fields (from here on). -- */
 
@@ -481,7 +482,6 @@ typedef struct FluidDomainSettings {
   int adapt_margin;
   int adapt_res;
   float adapt_threshold;
-  char _pad1[4]; /* Unused. */
 
   /* Fluid domain options */
   int maxres;            /* Longest axis on the BB gets this resolution assigned. */
